CHANGES
=======

3.9.3 (unreleased)
------------------


3.9.2 (2009-11-23)
------------------

- Fix Python 2.4 hmac compatibility issue by only using hashlib in
  Python versions 2.5 and above.

- Use the CookieClientIdManager's secret as the hmac key instead of the
  message when constructing and verifying client ids.

- Make it possible to construct CookieClientIdManager passing cookie namespace
  and/or secret as constructor's arguments.

- Use zope.schema.fieldproperty.FieldProperty for "namespace" attribute of
  CookieClientIdManager, just like for other attributes in its interface.
  Also, make ICookieClientIdManager's "namespace" field an ASCIILine, so
  it accepts only non-unicode strings for cookie names.

3.9.1 (2009-04-20)
------------------

- Restore compatibility with Python 2.4.

3.9.0 (2009-03-19)
------------------

- Don't raise deprecation warnings on Python 2.6.

- Drop dependency on ``zope.annotation``. Instead, we make classes implement
  `IAttributeAnnotatable` in ZCML configuration, only if ``zope.annotation``
  is available. If your code relies on annotatable `CookieClientIdManager`
  and `PersistentSessionDataContainer` and you don't include the zcml classes
  configuration of this package, you'll need to use `classImplements` function
  from ``zope.interface`` to make those classes implement `IAttributeAnnotatable`
  again.

- Drop dependency on zope.app.http, use standard date formatting function
  from the ``email.utils`` module.

- Zope 3 application bootstrapping code for session utilities was moved into
  zope.app.appsetup package, thus drop dependency on zope.app.appsetup in this
  package.

- Drop testing dependencies, as we don't need anything behind zope.testing and
  previous dependencies was simply migrated from zope.app.session before.

- Remove zpkg files and zcml slugs.

- Update package's description a bit.

3.8.1 (2009-02-23)
------------------

- Add an ability to set cookie effective domain for CookieClientIdManager.