@@ -1,10 +1,10 @@
 [buildout]
-develop = . 
+develop = .
 parts = test py
 
 [test]
 recipe = zc.recipe.testrunner
-eggs = zope.session
+eggs = zope.session [test]
 
 [py]
 recipe = zc.recipe.egg
